tests/ui/nll/borrowed-temporary-error.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/borrowed-temporary-error.rs:8:10
   |
LL |         &(v,)
   |          ^^^^ creates a temporary value which is freed while still in use
LL |
LL |     });
   |       - temporary value is freed at the end of this statement
LL |     println!("{:?}", x);
   |                      - borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
